delete and modify didi accounts
